Task5/nginx-services.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: front-end
  labels:
    role: front-end
spec:
  containers:
    - name: app
      image: nginx
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: front-end-app
  labels:
    role: front-end
spec:
  selector:
    role: front-end
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: back-end-api
  labels:
    role: back-end-api
spec:
  containers:
    - name: app
      image: nginx
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: back-end-api-app
  labels:
    role: back-end-api
spec:
  selector:
    role: back-end-api
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: admin-front-end
  labels:
    role: admin-front-end
spec:
  containers:
    - name: app
      image: nginx
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin-front-end-app
  labels:
    role: admin-front-end
spec:
  selector:
    role: admin-front-end
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: admin-back-end-api
  labels:
    role: admin-back-end-api
spec:
  containers:
    - name: app
      image: nginx
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin-back-end-api-app
  labels:
    role: admin-back-end-api
spec:
  selector:
    role: admin-back-end-api
  ports:
    - port: 80
      targetPort: 80
